# yugawara

./: .clang-tidy  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
src/: CMakeLists.txt  main.cpp
src/aggregate/: declaration.cpp
src/analyzer/: aggregate_info.cpp  aggregate_strategy.cpp  block.cpp  block_builder.cpp  expression_analyzer.cpp  expression_mapping.cpp  expression_resolution.cpp  intermediate_plan_optimizer.cpp  join_info.cpp  join_strategy.cpp  scalar_expression_analyzer.cpp  step_plan_builder.cpp  type_diagnostic.cpp  variable_liveness_analyzer.cpp  variable_liveness_info.cpp  variable_mapping.cpp
src/analyzer/details/: block_expression_util.cpp  collect_exchange_columns.cpp  collect_exchange_steps.cpp  collect_join_keys.cpp  collect_join_keys.h  collect_process_steps.cpp  collect_step_relations.cpp  collect_stream_variables.cpp  container_pool.h  decompose_predicate.cpp  decompose_projections.cpp  default_index_estimator.cpp  default_index_estimator.h  detect_join_endpoint_style.cpp  exchange_column_collector.cpp  exchange_column_collector.h  exchange_column_info.cpp  exchange_column_info.h  exchange_column_info_map.cpp  exchange_column_info_map.h  exchange_step_collector.cpp  exchange_step_collector.h  intermediate_plan_optimizer_options.cpp  predicate_decomposer.cpp  process_step_collector.cpp  process_step_collector.h  projection_decomposer.cpp  projection_decomposer.h  push_down_filters.cpp  push_down_filters.h  redundant_stream_variable_remover.cpp  remove_redundant_conditions.cpp  remove_redundant_conditions.h  remove_redundant_stream_variables.cpp  remove_redundant_stream_variables.h  rewrite_criteria.h  rewrite_join.cpp  rewrite_join.h  rewrite_scan.cpp  rewrite_scan.h  (+21 more)
src/binding/: aggregate_function_info.cpp  exchange_info.cpp  external_variable_info.cpp  factory.cpp  function_info.cpp  index_info.cpp  relation_info.cpp  table_column_info.cpp  variable_info.cpp  variable_info_impl.h
src/extension/scalar/: aggregate_function_call.cpp
src/function/: declaration.cpp  utils.h
src/serializer/: object_scanner.cpp
src/serializer/details/: binding_scanner.cpp  binding_scanner.h  extension_scalar_property_scanner.cpp  extension_scalar_property_scanner.h  extension_type_property_scanner.cpp  extension_type_property_scanner.h  predicate_scanner.cpp  predicate_scanner.h  resolution_scanner.cpp  resolution_scanner.h  variable_resolution_scanner.cpp  variable_resolution_scanner.h
src/storage/: column.cpp  index.cpp  provider.cpp  relation.cpp  table.cpp
src/storage/details/: index_estimator_result.cpp  index_key_element.cpp  search_key_element.cpp
src/type/: category.cpp  conversion.cpp  repository.cpp
src/variable/: comparison.cpp  criteria.cpp  declaration.cpp  negation.cpp  predicate.cpp  quantification.cpp
src/yugawara/: compiled_info.cpp  compiler.cpp  compiler_options.cpp  compiler_result.cpp
src/yugawara/aggregate/: declaration.cpp
src/yugawara/analyzer/: aggregate_info.cpp  block.cpp  block_algorithm.cpp  block_builder.cpp  expression_analyzer.cpp  expression_mapping.cpp  intermediate_plan_normalizer.cpp  intermediate_plan_optimizer.cpp  step_plan_builder.cpp  variable_liveness_analyzer.cpp  variable_liveness_info.cpp  variable_mapping.cpp  variable_resolution.cpp
src/yugawara/binding/: aggregate_function_info.cpp  class_id_util.h  exchange_info.cpp  external_variable_info.cpp  extract.cpp  factory.cpp  function_info.cpp  index_info.cpp  relation_info.cpp  schema_info.cpp  table_column_info.cpp  table_info.cpp  variable_info.cpp  variable_info_impl.h
src/yugawara/details/: collect_restricted_features.cpp  collect_restricted_features.h
src/yugawara/extension/: subquery_util.h
src/yugawara/function/: declaration.cpp  utils.cpp
src/yugawara/schema/: catalog.cpp  declaration.cpp  search_path.cpp
src/yugawara/serializer/: object_scanner.cpp  utils.cpp  utils.h
src/yugawara/storage/: basic_prototype_processor.cpp  column.cpp  column_value.cpp  index.cpp  provider.cpp  relation.cpp  resolve_prototype.cpp  resolve_prototype.h  sequence.cpp  table.cpp
src/yugawara/type/: category.cpp  comparable.cpp  conversion.cpp
src/yugawara/variable/: comparison.cpp  criteria.cpp  declaration.cpp  negation.cpp  predicate.cpp  quantification.cpp
test/: CMakeLists.txt  deleteme_test.cpp  error_set.h
test/aggregate/: aggregate_configurable_provider_test.cpp  aggregate_declaration_test.cpp
test/analyzer/: block_builder_test.cpp  block_test.cpp  expression_analyzer_plan_test.cpp  expression_analyzer_relation_test.cpp  expression_analyzer_scalar_test.cpp  expression_analyzer_statement_test.cpp  intermediate_plan_optimizer_test.cpp  scalar_expression_analyzer_test.cpp  step_plan_builder_test.cpp  type_diagnostic_test.cpp  variable_liveness_analyzer_test.cpp
test/analyzer/details/: collect_exchange_columns_test.cpp  collect_exchange_steps_test.cpp  collect_join_keys_test.cpp  collect_process_steps_test.cpp  collect_stream_variables_test.cpp  decompose_predicate_test.cpp  exchange_column_collector_test.cpp  exchange_step_collector_test.cpp  predicate_decomposer_test.cpp  process_step_collector_test.cpp  projection_decomposer_test.cpp  push_down_filters_test.cpp  redundant_stream_variable_remover_test.cpp  remove_redundant_conditions_test.cpp  remove_redundant_stream_variables_test.cpp  rewrite_join_test.cpp  rewrite_scan_test.cpp  rewrite_stream_variables_test.cpp  scalar_expression_variable_rewriter_test.cpp  scan_key_collector_test.cpp  (+7 more)
test/function/: function_configurable_provider_test.cpp  function_declaration_test.cpp
test/serializer/: object_scanner_test.cpp
test/storage/: column_test.cpp  index_test.cpp  storage_configurable_provider_test.cpp  table_test.cpp
test/type/: dummy_extension.h  type_category_test.cpp
test/util/: either_test.cpp  object_cache_test.cpp  object_repository_test.cpp  ternary_test.cpp
test/variable/: comparison_test.cpp  criteria_test.cpp  negation_test.cpp  nullity_test.cpp  predicate_dispatch_test.cpp  quantification_test.cpp  variable_declaration_test.cpp
test/yugawara/: compiler_test.cpp
(+344 files in other folders)
